--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,5 @@
 body {
-  height: 100%;
+  /*height: 100%;*/
   background-color: #F5F5F5;
   
 }
@@ -11,18 +11,19 @@ html {
 }
 
 #app {
-  height:100%;
+  /*height:100%;*/
 }
 
 /*
 - Background Colors:
-  MintGreen: ;
+  MintGreen: #6AA897;
   MidnightBlue: #2c3e50;
 */
 
 .mainMenu {
   background-color: #6AA897;
   height: 100%;
+  width: 300px;
   font-family: Montserrat;
   padding-right: 20px;
   position: fixed;
@@ -44,3 +45,20 @@ html {
   color: #fff;
   color: rgba( 255, 255, 255, 0.6 );
 }
+
+.content {
+  height: 100%;
+  min-height: 100%;
+  padding-left: 200px;
+  padding-right: 200px;
+  padding-top: 100px;
+  padding-bottom: 100px;
+  width: 2000px;
+}
+
+.homePage {
+  background-color: white;
+  font-family: Montserrat;
+  padding: 50px;
+}
+
