initial pages and styling

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,7 +11,7 @@ html {
 }
 
 #app {
-  /*height:100%;*/
+  height:100%;
 }
 
 /*
@@ -24,7 +24,7 @@ html {
   background-color: #6AA897;
   height: 100%;
   width: 300px;
-  font-family: Montserrat;
+  font-family: Avenir;
   padding-right: 20px;
   position: fixed;
   padding-top: 50px;
@@ -49,16 +49,19 @@ html {
 .content {
   height: 100%;
   min-height: 100%;
-  padding-left: 200px;
-  padding-right: 200px;
   padding-top: 100px;
   padding-bottom: 100px;
-  width: 2000px;
 }
 
-.homePage {
+.pageContent {
   background-color: white;
-  font-family: Montserrat;
+  font-family: Avenir;
   padding: 50px;
+}
+
+.pageContent > p {
+  font-size: 16px;
+  line-height: 35px;
+  color: #7B7B82;
 }
 
