--- a/public/css/style.css
+++ b/public/css/style.css
@@ -50,6 +50,15 @@ html {
   color: rgba( 255, 255, 255, 0.6 );
 }
 
+/* -- Mobile menu toggle button --*/
+.navbar-toggle {
+  background-color: #fff;
+}
+
+.navbar-collapse {
+  padding-left: 53px;
+}
+
 .content {
   height: 100%;
   min-height: 100%;
@@ -77,7 +86,7 @@ html {
 
 @media (max-width: 1120px) {
   .containerFluid { padding-left: 90px }
-  .content { width: 80%; }
+  .content { width: 80%; padding-top: 50px;}
   .mainMenu { width: 200px; }
   .mobileNavbar { display: none; }
 }
@@ -89,7 +98,7 @@ html {
 
 @media (max-width: 767px) {
   .containerFluid { padding-left: 0 }
-  .content { width: 100% }
+  .content { width: 96%; }
   .mainMenu { display: none }
   .mobileNavbar { display: block; }
 }
