--- a/public/css/style.css
+++ b/public/css/style.css
@@ -91,7 +91,7 @@ html {
 .content {
   height: 100%;
   min-height: 100%;
-  padding-top: 100px;
+  padding-top: 50px;
   padding-bottom: 100px;
 }
 
@@ -112,8 +112,12 @@ html {
 .pageHeaderContent {
   background-color: #fff;
   font-family: Avenir;
-  padding: 50px;
+  padding-top: 50px;
+  padding-left: 50px;
+  padding-right: 50px;
+  padding-bottom: 50px;
   margin-bottom: 25px;
+  margin-top: 40px;
 }
 
 /* -- Media Queries --*/
@@ -139,4 +143,8 @@ html {
   .content { width: 96%; }
   .mainMenu { display: none }
   .mobileNavbar { display: block; }
+  .pageHeaderContent {
+    padding-top: 25px;
+    padding-bottom: 25px;
+  }
 }
