--- a/public/css/style.css
+++ b/public/css/style.css
@@ -129,6 +129,10 @@ html {
   -webkit-box-shadow: none;
 }
 
+.navbar-toggle {
+  margin-top: 5px;
+}
+
 .content {
   height: 100%;
   min-height: 100%;
@@ -194,13 +198,18 @@ html {
   .containerFluid { padding-left: 0 }
   .content { width: 96%; }
   .mainMenu { display: none }
-  .mobileNavbar { display: block; }
   
+  .mobileNavbar { 
+    display: block; 
+    padding-left: 0px;
+  }
+
   .pageHeaderContent {
     padding-top: 5px;
     padding-bottom: 5px;
+    padding-left: 20px;
     margin-bottom: 15px;
-    margin-top: 35px;
+    margin-top: 30px;
   }
 
   .pageHeaderContent h2 {
