fixed vertical scrolling

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -195,6 +195,8 @@ html {
 
 /* Mobile */
 @media (max-width: 767px) {
+  html, body {margin: 0; height: 100%; overflow-x: hidden}
+  
   .containerFluid { padding-left: 0 }
   .content { width: 96%; }
   .mainMenu { display: none }
