--- a/public/css/style.css
+++ b/public/css/style.css
@@ -60,6 +60,11 @@ html {
   color: #FFF;
 }
 
+.navBrand:focus {
+  text-decoration: none;
+  color: #FFF;
+}
+
 .navDivider {
   border-top: 2px solid #FFF;
   float: right;
