--- a/public/css/style.css
+++ b/public/css/style.css
@@ -228,10 +228,12 @@ html {
 @media (max-width: 767px) {
   html, body {margin: 0; height: 100%; overflow-x: hidden}
 
-  overflow-y: scroll;
-  -webkit-overflow-scrolling: touch;
   
-  .containerFluid { padding-left: 0 }
+  
+  .containerFluid { 
+    padding-left: 0;
+    -webkit-overflow-scrolling: touch;
+  }
   .content { width: 96%; }
   .mainMenu { display: none }
   
