Image compression and content update

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,13 +1,14 @@
 body {
   /*height: 100%;*/
   background-color: #F5F5F5;
-  
+
 }
 
 html {
   width: 100%;
   height: 100%;
   background-color: #F5F5F5;
+  overflow-x: hidden;
 }
 
 #app {
@@ -98,10 +99,10 @@ html {
   border: 1.5px solid #24CC82;
   color: #24CC82;
   font-size: 16px;
-  padding-left: 15px; 
+  padding-left: 15px;
   padding-right: 15px;
   padding-top: 10px;
-  padding-bottom: 10px; 
+  padding-bottom: 10px;
 }
 
 .button:hover {
@@ -128,7 +129,7 @@ html {
 .buttonGlyph {
   top: 2px;
   padding-right: 5px;
-} 
+}
 
 /* -- Mobile menu toggle button --*/
 .navbar-toggle {
@@ -137,7 +138,7 @@ html {
 }
 
 .navbar-default .navbar-toggle {
- border: 2px solid #24CC82; 
+ border: 2px solid #24CC82;
 }
 
 .navbar-default .navbar-toggle:hover {
@@ -228,21 +229,21 @@ html {
 @media (max-width: 767px) {
   html, body {margin: 0; height: 100%; overflow-x: hidden}
 
-  
-  
-  .containerFluid { 
+
+
+  .containerFluid {
     padding-left: 0;
     -webkit-overflow-scrolling: touch;
   }
   .content { width: 96%; }
   .mainMenu { display: none }
-  
+
   .sidebar {
     padding-right: 0;
   }
 
-  .mobileNavbar { 
-    display: block; 
+  .mobileNavbar {
+    display: block;
     padding-left: 0px;
   }
 
@@ -257,14 +258,14 @@ html {
   .pageHeaderContent h2 {
     font-size: 25px;
   }
-  
+
   .pageContent {
     padding-left: 20px;
     padding-right: 20px;
     padding-top: 20px;
     padding-bottom: 10px;
   }
-  
+
   .pageContent h4 {
     font-size: 15px;
   }
