--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23,16 +23,6 @@ html {
   FlatGrey: #7B7B82;
 */
 
-/*.colorTextHeadings {
-  color: #24CC82;
-  padding-top: 20px;
-  font-size: 18px;
-}*/
-
-/*.containerFluid {
-  padding-left: 200px;
-}*/
-
 .mainMenu {
   background-color: #24CC82;
   height: 100%;
@@ -48,46 +38,6 @@ html {
   text-align: right;
   color: #FFF;
 }
-
-/*.navSubbar {
-  padding-top: 30px;
-}*/
-
-.navBrand {
-  color: #FFF;
-  text-decoration: none;
-}
-
-.navBrand:hover {
-  text-decoration: none;
-  color: #FFF;
-}
-
-.navBrand:focus {
-  text-decoration: none;
-  color: #FFF;
-}
-
-.navDivider {
-  border-top: 2px solid #FFF;
-  float: right;
-  width: 90%;
-}
-
-/*.navSubbar > * {
-  margin-top: 25px;
-  color: #fff;
-  color: rgba( 255, 255, 255, 0.6 );
-}
-
-.navSubbar a{
-  text-decoration: none;
-  color: rgba( 255, 255, 255, 0.6 );
-}
-
-.navSubbar a:hover {
-  color: #fff;
-}*/
 
 .button {
   background-color: #FFF;
@@ -119,11 +69,6 @@ html {
   border: 1.5px solid #24CC82;
   text-decoration: none;
   color: #FFF;
-}
-
-.buttonGlyph {
-  top: 2px;
-  padding-right: 5px;
 }
 
 /* -- Mobile menu toggle button --*/
@@ -159,13 +104,6 @@ html {
   margin-top: 5px;
 }
 
-/*.content {
-  height: 100%;
-  min-height: 100%;
-  padding-top: 50px;
-  padding-bottom: 100px;
-}*/
-
 .pageContent {
   background-color: white;
   font-family: Avenir;
@@ -181,73 +119,25 @@ html {
 
 /* PageHeader Banner */
 
-.pageHeaderContent {
-  background-color: #fff;
-  font-family: Avenir;
-  padding-top: 50px;
-  padding-left: 50px;
-  padding-right: 50px;
-  padding-bottom: 50px;
-  margin-bottom: 25px;
-  margin-top: 40px;
-}
-
-.pageHeaderContent > h2 {
-  color: #24CC82;
-}
-
 .contactIcon {
   height: 75px;
   width: 75px;
 }
 
-/* -------------------*/
 /* -- Media Queries --*/
-
 /* ================Desktop======================= */
 @media (max-width: 5000px) {
-  .mobileNavbar { display: none; }
 }
 
 /* ================Tablet======================= */
 @media (max-width: 1120px) {
-  /* .containerFluid { padding-left: 90px }*/
-  /*.content { width: 80%; padding-top: 50px;}*/
-  .mainMenu { width: 200px; }
-  .mobileNavbar { display: none; }
+  /*.mainMenu { width: 200px; }*/
 }
 
 /* ================Mobile======================= */
 @media (max-width: 767px) {
   html, body {margin: 0; height: 100%; overflow-x: hidden}
-
-  /*.containerFluid {
-    padding-left: 0;
-    -webkit-overflow-scrolling: touch;
-  }*/
-  /*.content { width: 96%; } */
   .mainMenu { display: none }
-
-  /*.sidebar {
-    padding-right: 0;
-  }*/
-
-  .mobileNavbar {
-    display: block;
-    padding-left: 0px;
-  }
-
-  .pageHeaderContent {
-    padding-top: 5px;
-    padding-bottom: 5px;
-    padding-left: 20px;
-    margin-bottom: 15px;
-    margin-top: 30px;
-  }
-
-  .pageHeaderContent h2 {
-    font-size: 25px;
-  }
 
   .pageContent {
     padding-left: 20px;
